@@ -1,3 +1,4 @@
+* [Bug 1695] ntpdate takes longer than necessary.
 (4.2.7p76) 2010/11/02 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1690] Unit tests fails to build on some systems.
 * [Bug 1691] Use first NMEA sentence each second.
